RESOLVED FIXED149325
[iOS WK2] WTR fails to set the key window in the UIKit sense
https://bugs.webkit.org/show_bug.cgi?id=149325
Summary [iOS WK2] WTR fails to set the key window in the UIKit sense
Simon Fraser (smfr)
Reported 2015-09-17 18:33:53 PDT
[iOS WK2] WTR fails to set the key window in the UIKit sense
Attachments
Patch (4.57 KB, patch)
2015-09-17 18:39 PDT, Simon Fraser (smfr)
no flags
Patch (12.33 KB, patch)
2015-09-17 18:43 PDT, Simon Fraser (smfr)
no flags
Patch (13.04 KB, patch)
2015-09-17 18:50 PDT, Simon Fraser (smfr)
no flags
Patch (5.98 KB, patch)
2015-09-17 18:55 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2015-09-17 18:39:19 PDT
Simon Fraser (smfr)
Comment 2 2015-09-17 18:43:16 PDT
Simon Fraser (smfr)
Comment 3 2015-09-17 18:50:55 PDT
Simon Fraser (smfr)
Comment 4 2015-09-17 18:55:17 PDT
Tim Horton
Comment 5 2015-09-17 18:56:45 PDT
Comment on attachment 261473 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=261473&action=review > Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm:121 > + [m_view release]; why are these not retainptrs?
Simon Fraser (smfr)
Comment 6 2015-09-17 18:59:29 PDT
Daniel Bates
Comment 7 2018-02-26 11:31:18 PST
*** Bug 81736 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.