Tools/WebKitTestRunner/ios/PlatformWebViewIOS.mm
@@ -55,9 +55,10 @@
 
     return self;
 }
+
 - (BOOL)isKeyWindow
 {
-    return _platformWebView ? _platformWebView->windowIsKey() : YES;
+    return [super isKeyWindow] && (_platformWebView ? _platformWebView->windowIsKey() : YES);
 }
 
 - (void)setFrameOrigin:(CGPoint)point
@@ -107,12 +108,25 @@ PlatformWebView::PlatformWebView(WKWebViewConfiguration* configuration, const Te
     CGRect rect = CGRectMake(0, 0, TestController::viewWidth, TestController::viewHeight);
     m_view = [[WKWebView alloc] initWithFrame:rect configuration:configuration];
 
-    CGRect windowRect = rect;
-    m_window = [[WebKitTestRunnerWindow alloc] initWithFrame:windowRect];
+    m_window = [[WebKitTestRunnerWindow alloc] initWithFrame:rect];
     m_window.platformWebView = this;
 
     [m_window addSubview:m_view];
     [m_window makeKeyAndVisible];
+}
+
+PlatformWebView::~PlatformWebView()
+{
+    m_window.platformWebView = nil;
+    [m_view release];
+    [m_window release];
+}
+
+void PlatformWebView::setWindowIsKey(bool isKey)
+{
+    m_windowIsKey = isKey;
+    if (isKey)
+        [m_window makeKeyWindow];
 }
 
 void PlatformWebView::resizeTo(unsigned width, unsigned height)
@@ -121,13 +135,6 @@ void PlatformWebView::resizeTo(unsigned width, unsigned height)
     frame.size.width = width;
     frame.size.height = height;
     setWindowFrame(frame);
-}
-
-PlatformWebView::~PlatformWebView()
-{
-    m_window.platformWebView = 0;
-    [m_view release];
-    [m_window release];
 }
 
 WKPageRef PlatformWebView::page()
