Tools/WebKitTestRunner/mac/PlatformWebViewMac.mm
@@ -145,6 +145,11 @@ PlatformWebView::PlatformWebView(WKWebViewConfiguration* configuration, const Te
 #endif
 }
 
+void PlatformWebView::setWindowIsKey(bool isKey)
+{
+    m_windowIsKey = isKey;
+}
+
 void PlatformWebView::resizeTo(unsigned width, unsigned height)
 {
     WKRect frame = windowFrame();
